--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.4",
     "@ngrx/effects": "^18.0.2",
+    "@ngrx/router-store": "^18.0.2",
     "@ngrx/store": "^18.0.2",
     "@ngrx/store-devtools": "^18.0.2",
     "express": "^4.18.2",
